# pyaotc

./: .gitignore  Cargo.toml  README.md  addition.ll  build.sh  build_prereq_llvm.sh  example_any_cast.ll  factorial  globals  hanoi  output_executable  pyaotc.sh  range.c  run_c_tests.sh  setup.sh  test  test.py
benches/: benchmark.rs
collections/: iterator.c  iterator.h  list.c  list.h  range.c  range.h  string_utils.c  string_utils.h
collections/tests/: list_tests.c  range_tests.c  str_tests.c
examples/: append_lots.py  collatz.py  factorial.py  fib.py  func_with_multiple_return_types.py  globals.py  hanoi.py  iterating.py  list-iteration.py  list_add.py  list_iteration.py  num_islands.py  polytype_func.py  range.py  range_iterate.py  subscript.py  using_objects.py  while.py  wrong_order.py
object/: Add.c  Div.c  Eq.c  FloorDiv.c  Gt.c  GtE.c  Lt.c  LtE.c  Mod.c  Mult.c  Not.c  NotEq.c  ObjOps.h  Object.c  UAdd.c  bool_ops.c  object.h
object/tests/: add_tests.c  and_tests.c  div_tests.c  eq_tests.c  floordiv_tests.c  gt_tests.c  gte_tests.c  lt_tests.c  lte_tests.c  mod_tests.c  not_tests.c  object_tests.c  or_tests.c  uadd_tests.c  usub_tests.c
object_impl/: Add.c  Eq.c  Mult.c  Not.c  Object.c  Sub.c  USub.c  object.h  object_tests.c
object_impl/tests/: add_tests.c  eq_tests.c
src/: addition  addition.s  astutils.rs  call_collector.rs  compiler.rs  exprrules.rs  main.rs  rule_typing.rs  type_inference.rs  type_rules.rs  varrules.rs
src/call_collector/: tests.rs
src/codegen/: any_class_utils.rs  error.rs  generic_codegen.rs  (+3 more)
tests/: pyaotc_tests.rs
(+25 files in other folders)
