[package]
name = "pyaotc"
version = "0.1.0"
edition = "2021"

[dependencies]
rustpython-ast = { version = "0.4.0", features = ["visitor"] }
rustpython-parser = "0.4.0"
llvm-sys = "140"
inkwell = { version = "0.5.0", features = ["llvm14-0"] }
malachite-bigint = "0.2.0"
lang_tester = "0.9.0"

[dependencies.uuid]
version = "1.15.1"
# Lets you generate random UUIDs
features = [
    "v4",
]

[[test]]
name = "pyaotc_tests"
path = "tests/pyaotc_tests.rs"
harness = false